--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/ceewizz/socialnetworkapi-nosql#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "inquirer": "^8.2.4",
-    "mongoose": "^8.1.3"
+    "inquirer": "^9.2.15",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0"
   }
 }
